--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "koa-proxy": "^1.0.0-alpha.3",
     "koa-router": "^10.0.0",
     "koa-static-server": "^1.5.2",
+    "node-sass": "^7.0.1",
     "promise-formation": "^1.0.4"
   }
 }
